--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,15 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-green.min.css">
     <title>
       Messages
     </title>
   </head>
   <body>
     <div id="content"></div>
-    <script src="js/build.js"></script>
+
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
